# optimesh

./: .gitattributes  .gitignore  .pylintrc  CITATION.cff  LICENSE.txt  Makefile  README.md  codecov.yml  justfile  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: Makefile  README.md  compare-gmsh-quality.py  create-circle.py  create_circle.py  create_logo.py  laplace-fp.py
optimesh/: __about__.py  __init__.py  chen_holst.py  cli.py  cpt.py  cvt.py  helpers.py  laplace.py  lloyd.py  main.py  odt.py  schloemer.py
optimesh/cli/: __init__.py  info.py  main.py
optimesh/cpt/: __init__.py  fixed_point.py  linear_solve.py  quasi_newton.py
optimesh/cvt/: __init__.py  _block_diagonal.py  _full_hessian.py  _helpers.py  _lloyd.py  block_diagonal.py  full.py  full_hessian.py  ghosted_mesh.py  helpers.py  lloyd.py
optimesh/odt/: __init__.py  fixed_point.py  nonlinear.py
src/optimesh/: helpers.py  laplace.py  main.py
src/optimesh/cli/: __init__.py  info.py  main.py
src/optimesh/cpt/: __init__.py  fixed_point.py  linear_solve.py  quasi_newton.py
src/optimesh/cvt/: __init__.py  _helpers.py  block_diagonal.py  full.py  lloyd.py
src/optimesh/odt/: nonlinear.py
test/: helpers.py  meshes.py  test_chen_holst_cpt.py  test_chen_holst_odt.py  test_cli.py  test_comparison.py  test_cpt.py  test_cvt.py  test_ghost.py  test_laplace.py  test_lloyd.py  test_odt.py  test_odt_chen.py  test_rotated.py  test_schloemer.py  test_surface.py
test/meshes/: pacman.vtk
tests/: __init__.py  helpers.py  meshes.py  test_comparison.py  test_cpt.py  test_cvt.py  test_laplace.py  test_odt.py  test_surface.py
tests/meshes/: circle-small.vtk  circle.vtk
