[metadata]
name = optimesh
version = 0.6.3
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Mesh optimization/smoothing
url = https://github.com/nschloe/optimesh
project_urls =
    Code=https://github.com/nschloe/optimesh
    Issues=https://github.com/nschloe/optimesh/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    meshio >= 4, <5
    meshplex >= 0.13.0, < 0.14.0
    numpy
    quadpy >= 0.16.0, < 0.17.0
    termplotlib
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all = matplotlib
png = matplotlib

[options.entry_points]
console_scripts =
    optimesh = optimesh.cli:main
    optimesh-info = optimesh.cli:info
