[metadata]
name = optimesh
version = 0.8.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Mesh optimization/smoothing
url = https://github.com/nschloe/optimesh
project_urls =
    Code=https://github.com/nschloe/optimesh
    Issues=https://github.com/nschloe/optimesh/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    mathematics
    physics
    engineering
    mesh
    mesh generation
    optimization

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    meshio >= 4, <5
    meshplex >= 0.16.0, < 0.17.0
    numpy
    npx
    quadpy >= 0.16.1, < 0.17.0
    termplotlib
python_requires = >=3.6

[options.extras_require]
all = matplotlib
png = matplotlib

[options.entry_points]
console_scripts =
    optimesh = optimesh.cli:main
    optimesh-info = optimesh.cli:info
